styles.css
@font-face {
    font-family: 'glacial indifference';
    src: url('./fonts/glacialindifference-regular-webfont.woff2') format('woff2');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'glacial indifference';
    src: url('./fonts/glacialindifference-bold-webfont.woff2') format('woff2');
    font-weight: bold;
    font-style: normal;
}

:root {
    --body-background-color: #e3e3ed;

    --header-background-color: #003008;
    --header-border: 0px solid #473320;

    --aside-background-color: rgba(0, 41, 7, 0.1);
    --aside-border: 0px solid #473320;
    --aside-list-border: 1px solid rgba(0, 41, 7, 0.1);

    --library-background-color: #f5f5fc;
    --library-header-color: #003008;
    --library-border: 0px solid #473320;
    --library-even-color: rgba(0, 41, 7, 0.1);

    --add-btn-color: rgba(0, 41, 7, 0.1);
    --add-btn-border: none;

    --dialog-background-color: #eeeef3;
    --dialog-border: 3px solid #003008;

    --box-shadow-color: #9d9d9d;
    --text-color-light: #e9e9e9;
    --text-color-dark: #232323;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'glacial indifference';
    letter-spacing: .05rem;
}

body {
    min-height: 100vh;
    background-color: var(--body-background-color);
    /* background-image: var(--body-background-image); */
    display: flex;
    flex-direction: column;
}

main {
    display: flex;
    flex: 1;
    padding: 16px;
    padding-top: 32px;
}

svg {
    width: 2rem;
    height: 2rem;
}

/* * * * * * * * * * * * *
* Header
* * * * * * * * * * * * * */
header {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 8px 1rem;
    background-color: var(--header-background-color);
    margin-bottom: 1rem;
    color: var(--text-color-light);
    box-shadow: 2px 2px 10px var(--box-shadow-color);
    border-bottom: var(--header-border);
}

.menu-btn {
    background: none;
    border: none;
    cursor: pointer;
    margin-right: auto;
}

header svg {
    vertical-align: middle;
}

header svg path {
    fill: #e9e9e9;
}

.login {
    margin-left: auto;
    cursor: pointer;
}

/* * * * * * * * * * * * *
* Aside
* * * * * * * * * * * * * */
.info {
    width: 0;
    padding: 0;
    opacity: 0;
    transition: width 350ms, padding 350ms, opacity 350ms;
    background-color: var(--aside-background-color);
    border: var(--aside-border);
    border-radius: 5px;
    color: var(--text-color-dark);
    box-shadow: 2px 2px 10px var(--box-shadow-color);
}

.info.expand {
    padding: 20px;
    width: 200px;
    opacity: 1;
    margin-right: 1rem;
}

.info h2 {
    margin-bottom: 10px;
}

.info ul {
    list-style: none;
    margin-bottom: 20px;
}

.info li {
    white-space: nowrap;
    padding: .5rem 0;
    border-bottom: var(--aside-list-border);
}

/* * * * * * * * * * * * *
* Add Book Button
* * * * * * * * * * * * * */
.add-btn {
    color: var(--text-color-dark);
    font-weight: 500;
    margin-bottom: 48px;
    padding: .2em 1em;
    background: var(--add-btn-color);
    border: var(--add-btn-border);
    border-radius: 5px;
    cursor: pointer;
    box-shadow: 1px 1px 5px var(--box-shadow-color);
}

.add-btn:hover {
    background: rgba(0, 41, 7, 0.2);
}

.add-btn svg {
    vertical-align: middle ;
    width: 1.5rem;
    height: 1.5rem;
    margin-left: .5em;
}

.add-btn svg path {
    fill: var(--text-color-dark);
}

/* * * * * * * * * * * * *
* Add Book Dialog
* * * * * * * * * * * * * */
.add-dialog {
    border: var(--dialog-border);
    background-color: var(--dialog-background-color);
    border-radius: 5px;
    align-self: center;
    margin: 0 auto;
    padding: 3rem;
    width: clamp(300px, 40vw, 500px);
}

#close-modal {
    width: min-content;
    align-self: end;
    margin: -2.5rem -2rem 20px 0;
    font-weight: bold;
    font-size: 1rem;
    border: none;
    background: none;
    cursor: pointer;
}

.add-dialog form {
    display: flex;
    flex-direction: column;
}

dialog label {
    font-weight: 500;
}

dialog label:not([class='check-label']) {
    margin-bottom: .5rem;
}

dialog input:not([type='checkbox']) {
    border: 1px solid #003008;
    margin-bottom: 1rem;
    height: 1.5rem;
    border-radius: 3px;
    padding: .5rem;
}

dialog input:not([type='checkbox']):focus {
    box-shadow: 1px 1px 4px var(--box-shadow-color);
    outline: 1px solid green;
}

dialog input[type='checkbox'] {
    margin: 1rem 0;
}

dialog label[class='check-label'] {
    margin-left: .7rem;
}

dialog div {
    margin: .5rem 0 1rem 0;
    align-self: end;
}

#submit-book {
    color: var(--text-color-dark);
    font-weight: 500;
    padding: .2em 1em;
    background: rgba(0, 41, 7, 0.1);
    border: var(--add-btn-border);
    border-radius: 5px;
    cursor: pointer;
    box-shadow: 3px 3px 8px var(--box-shadow-color);
}

/* * * * * * * * * * * * *
* Library
* * * * * * * * * * * * * */
.library-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.library {
    width: clamp(500px, 90%, 1000px);
    background-color: var(--library-background-color);
    background-image: var(--library-background-image);
    flex: 0;
    height: 100%;
    border: var(--library-border);
    border-radius: 5px;
    box-shadow: 2px 2px 10px var(--box-shadow-color);
}

.library {
    border-spacing: 0;
    color: var(--text-color-dark);
}

thead {
    background-color: var(--library-header-color);
    color: var(--text-color-light);
}

thead th {
    border-bottom: var(--library-border);
}

thead th:first-child {
    border-top-left-radius: 3px;
}

thead th:last-child {
    border-top-right-radius: 3px;
}

th, td {
    padding: 1rem 0;
    max-width: 200px;
    min-width: 90px;
    word-wrap: break-word;
}

tr th {
    text-align: left;
}

tr th:first-child {
    padding: 1rem 50px;
}

tr td:last-child {
    text-align: center;
}

tr:nth-child(even) {
    background-color: var(--library-even-color);
}

.delete-btn {
    background: none;
    border: none;
    cursor: pointer;
    transition: transform 150ms;
    width: 2rem;
    height: 2rem;
}

.delete-btn:hover {
    transform: scale(1.2);
}

tr:not([class='head']):hover {
    outline: 2px solid #473320;
}

tr svg {
    width: 1.5rem;
    height: 1.5rem;
}
tr svg path {
    fill: red;
}

